--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
             "label": "save and compile for C++",
             "command": "g++",
             "args": [
-                "${file}",
+                "${file}\\*.cpp",
                 "-g",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
